feat: add autocomplete address with algolia package

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "algolia-places-react": "^1.6.0",
     "antd": "^4.8.0",
     "axios": "^0.21.0",
     "prop-types": "^15.7.2",
